; ModuleID = '/home/carl/AnghaBench/disque/src/extr_cluster.c_clusterBlacklistCleanup.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_cluster.c_clusterBlacklistCleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@server = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clusterBlacklistCleanup() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @server, i32 0, i32 1), align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32* @dictGetSafeIterator(i32 %6)
  store i32* %7, i32** %1, align 8
  br label %8

8:                                                ; preds = %25, %0
  %9 = load i32*, i32** %1, align 8
  %10 = call i32* @dictNext(i32* %9)
  store i32* %10, i32** %2, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %26

12:                                               ; preds = %8
  %13 = load i32*, i32** %2, align 8
  %14 = call i64 @dictGetUnsignedIntegerVal(i32* %13)
  store i64 %14, i64* %3, align 8
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @server, i32 0, i32 0), align 8
  %17 = icmp slt i64 %15, %16
  br i1 %17, label %18, label %25

18:                                               ; preds = %12
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @server, i32 0, i32 1), align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @dictGetKey(i32* %22)
  %24 = call i32 @dictDelete(i32 %21, i32 %23)
  br label %25

25:                                               ; preds = %18, %12
  br label %8

26:                                               ; preds = %8
  %27 = load i32*, i32** %1, align 8
  %28 = call i32 @dictReleaseIterator(i32* %27)
  ret void
}

declare dso_local i32* @dictGetSafeIterator(i32) #1

declare dso_local i32* @dictNext(i32*) #1

declare dso_local i64 @dictGetUnsignedIntegerVal(i32*) #1

declare dso_local i32 @dictDelete(i32, i32) #1

declare dso_local i32 @dictGetKey(i32*) #1

declare dso_local i32 @dictReleaseIterator(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
